2005-05-30  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump to 20050530
	* Merge with NetBSD make, pick up:
	  o Handle dependencies for .BEGIN, .END and .INTERRUPT

	* README: was seriously out of date.
	
2005-03-22  Simon J. Gerraty  <sjg@void.crufty.net>

	* Important to use .MAKE rather than MAKE.

2005-03-15  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump to 20050315
	* Merge with NetBSD make, pick up:
	  o don't mistake .elsefoo for .else
	  o use suffix-specific search path correctly
	  o bunch of style nits

2004-05-11  Simon J. Gerraty  <sjg@void.crufty.net>

	* boot-strap: 
	o ensure that args to --src and --with-mksrc
	  are resolved before giving them to configure.
	o add -o "objdir" so that builder can control it,
	  default is $OS as determined by os.sh
	o add -q to suppress all the install instructions.

2004-05-08  Simon J. Gerraty  <sjg@void.crufty.net>

	* Remove __IDSTRING()

	* Makefile.in (BMAKE_VERSION): bump to 20040508
	* Merge with NetBSD make, pick up:
	  o posix fixes
	    - remove '-e' from compat mode
	    - add support for '+' command-line prefix.
	  o fix for handling '--' on command-line.
	  o fix include in lst.lib/lstInt.h to simplify '-I's
	  o we also picked up replacement of MAKE_BOOTSTRAP 
	    with !MAKE_NATIVE which is a noop, but possibly confusing.

2004-04-14  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump to 20040414
	* Merge with NetBSD make, pick up:
	  o allow quoted strings on lhs of conditionals
	  o issue warning when extra .else is seen
	  o print line numer when errors encountered during parsing from
	  string.

2004-02-20  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION):  bump to 20040220
	* Merge with NetBSD make, pick up:
	  o fix for old :M parsing bug.
	  o re-jigged unit-tests

2004-02-15  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (accept test): use ${.MAKE:S,^./,${.CURDIR}/,}